Dependency injection and more

--- a/Riode-project-backend-P317/Riode.WebUI/Riode.WebUI.csproj
+++ b/Riode-project-backend-P317/Riode.WebUI/Riode.WebUI.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Views\static\coming-soon.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
