--- a/Riode-project-backend-P317/Riode.WebUI/appsettings.json
+++ b/Riode-project-backend-P317/Riode.WebUI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "host": "smtp.mail.ru",
+    "account": "demo@mail.ru",
+    "password" : "demo111"
+  }
 }
